GOAL:
22 August 2018:
        Website will now only accept one article at a time per each registered email address
        Form now submits all required data to database and displays on page
        Cleaned up console log.
        Started Spliting up form component into logic and view files.

21 August:
        You can now login to the website and submit articles

17 August 2018
        Form now submits only if fields are not empty
        Form reroutes to upload article on submit
        Fixed no-op error by adding componentWillUnmount



14 August 2018
        Further cleanup and re-organisation of components and css files.
        myKnews now links to upload form, filters back to home.
        Continued styling news page.

13 August 2018
        Styled News Page as it was before the database work
        Cleaned up, move around and separated components to make everything a bit neater and easier to use.

10 August 2018
        Connected project to firebase database
        Successfully displayed information from the database
        Setup a form that allows users to enter data and show on website. This was removed but will be added back in later
        When you click on a home page news item you will be taken to a page with information from the database rather than the local json file like before
        All of the above works when upload to the porfolio
        Home page now loads from database instead of local file
        You can now submit info to the database via a form and have it display on page.
        The page id is now set dependent on how many objects there are in the database. When you submit the form it assigns an id equal to total number of objects in the database + 1.



3 August 2018
        Used html-react-parser to get html from json file rendered correctly to page
        Deployed project to portfolio for testing and letting people know I am busy.
        Created a message for WIP deployment