@@ -173,9 +173,12 @@ Part 2 Implement Database functionality:
      ☐ Implement some sort of like and dislike functionality @started(18-08-15 11:17)
      ✔ Form should take in a series of mandatory inputs or not be able to submit @started(18-08-15 15:23) @done(18-08-17 13:43) @lasted(1d22h20m56s)
         ✔ Will need to complete User Auth before I can do Author @started(18-08-17 13:44) @done(18-08-22 17:02) @lasted(5d3h18m3s)
+     ✔ Be able to see posts linked to current account on myKnews page @started(18-08-23 12:00) @done(18-08-23 14:18) @lasted(2h18m12s)
      ☐ The ability to edit posts when submitted. @started(18-08-13 18:04)
      ☐ The ability to hide but not delete posts from view @started(18-08-13 18:04)
-     ☐ The ability to delete posts @started(18-08-13 18:04)
+     ✔ The ability to delete posts @started(18-08-13 18:04) @done(18-08-23 17:06) @lasted(1w2d23h2m23s)
+        ☐ BUG:: You are unable to create a new article straight away unless you refresh the page
+        //☐ ISSUE:: The key that is now used is +1 the number of objects in the database. Not an issue I think but might cause some problems
      ☐ Ability to Like and Dislike Posts @started(18-08-13 18:04)
      ☐ Look into loading a limited number of news items on the home page. The scroll could be used to detect the scroll position and load more things from the database.
      ☐ Ability to approve posts made by unauthorized users @started(18-08-22 16:04)
@@ -195,10 +198,18 @@ Deployed Project To-Do:
     ☐ BUG: If you refresh the page on a news article you will get a 404 error.
     
 
+23 August 2018:
+    ☐ Create UI letting users know article limit this before they try to type stuff in 
+    ✔ Be able to see posts linked to current account on myKnews page @done(18-08-23 14:18)
+    ✔ Ability to delete posts @done(18-08-23 17:07)
+    ☐ Automate Post date
+    ☐ Deploy new build to portfolio
+    ☐ Write blog
+
 
 22 August Goals:
     ✔ Limit User Uploads to One per registered email address @started(18-08-21 17:36) @done(18-08-22 12:56) @lasted(19h20m59s)
-        ☐ Create UI letting users know about this before they try to type stuff in @started(18-08-22 12:57)
+        ✘ Create UI letting users know about this before they try to type stuff in @started(18-08-22 12:57) @cancelled(18-08-23 11:54) @wasted(22h57m50s)
     
         ✘ Automate Post Date @started(18-08-21 17:36) @cancelled(18-08-22 15:40) @wasted(22h4m24s)
              Attempted this but something didn't want to play nice. Will come back this later as it's not a major priority.
